--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ libheif-rs = "0.15.0"
 tempfile = "3.2.0"
 mozjpeg = "0.9.0"
 num = "0.4.0"
+anyhow = "1.0.41"
+thiserror = "1.0.25"
 
 [build-dependencies]
 tonic-build = "0.4.2"
