--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tracing-futures = "0.2.5"
 tracing-subscriber = "0.2.18"
 pretty-bytes = "0.2.2"
 humantime = "2.1.0"
+kamadak-exif = "0.5.4"
 
 [build-dependencies]
 tonic-build = "0.4.2"
